--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+            </plugin>
         </plugins>
     </build>
     <properties>
@@ -67,5 +72,6 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
 
 </project>
