--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.shyiko.dotenv</groupId>
             <artifactId>dotenv</artifactId>
