--- a/pom.xml
+++ b/pom.xml
@@ -122,5 +122,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>4.10.0</version>
+        </dependency>
     </dependencies>
 </project>
